# opengl-study

./: .clang-format  CMakeLists.txt
common/: CMakeLists.txt  ogldev_util.cpp  ogldev_util.h
tutorials/: 01_create_window.cpp  02_hello_dot.cpp  03_first_triangle.cpp  CMakeLists.txt  glfw_simple.cpp  utility.cpp  utility.h
tutorials/04_shaders/: 04_shaders.cpp  CMakeLists.txt
tutorials/05_uniform_variables/: 05_uniform_variables.cpp  CMakeLists.txt
tutorials/06_transform/: 06_transform.cpp  CMakeLists.txt
tutorials/06_translation/: 06_translation.cpp  CMakeLists.txt
tutorials/07_rotation/: 07_rotation.cpp  CMakeLists.txt
